--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarText">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://x-shark-inu.gitbook.io/x-shark-inu/team/meet-the-team"
+            <a class="nav-link" href="https://x-shark-inu.gitbook.io/x-shark-inu/"
               target="_blank">Whitepaper</a>
           </li>
           <li class="nav-item">
@@ -120,7 +120,7 @@
                 </p>
                 <ul id="btnheader" class="d-flex justify-content-evenly flex-wrap">
                   <li>
-                    <a target="_blank" href="https://t.me/XSharkINUoficial">
+                    <a target="_blank" href="https://x-shark-inu.gitbook.io/x-shark-inu/">
                       <button class="custom-btn btn-5">
                         <div>
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -136,7 +136,7 @@
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="https://t.me/XSharkINUoficial">
+                    <a target="_blank" href="https://t.me/xsharkinu_official">
                       <button class="custom-btn btn-5">
                         <div>
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -540,7 +540,7 @@
                   <h1 class="text-white">Junte-se a nossa comunidade</h1>
                   <p>Siga-nos nas redes sociais para se manter informado sobre nossas últimas atualizações.</p>
                   <div class="wrap">
-                    <a href="https://t.me/blacksaleoficial" target="_blank">
+                    <a href="https://t.me/xsharkinu_official" target="_blank">
                       <button class="btnc">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                           class="bi bi-telegram" viewBox="0 0 16 16">
