--- a/index.html
+++ b/index.html
@@ -378,16 +378,15 @@
                 <h2 class="h3 pt-2 text-white text-center" style="color: #35acfc;"><strong style="color: #35acfc;">Token
                     distribution</strong></h2>
               </div>
-              <div id="energyAllocation"></div>
-              <div id="energyAllocationMobile"></div>
+             
             </div>
             <div class="col-4 d-flex justify-content-center flex-column typodef typochart">
               <h2 class="h3 pt-2 text-white" style="color: #35acfc;"><strong style="color: #35acfc;">Fees</strong></h2>
               <hr class="hrteam" style="background: #35acfc;">
-              <p>Prize: 2%</p>
-              <p>Marketing: 4%</p>
-              <p>Development: 4%</p>
-              <p>Rewards in BTH Holders: 5%</p>
+              <p>Buy Black: 3%</p>
+              <p>Marketing: 3%</p>
+              <p>Liquidity: 1%</p>
+              <p>Rewards 1%</p>
               <h4 class="h4 mt-3" style="color: #35acfc;">Total fees: <strong style="color: #35acfc;">15%</strong></h4>
             </div>
           </div>
@@ -537,8 +536,8 @@
                 <div class="col d-flex justify-content-center"><img class="animt" src="../images/btcmini.png" alt="">
                 </div>
                 <div class="col-6 d-flex align-items-center flex-column" data-aos="fade-up">
-                  <h1 class="text-white">Junte-se a nossa comunidade</h1>
-                  <p>Siga-nos nas redes sociais para se manter informado sobre nossas últimas atualizações.</p>
+                  <h1 class="text-white">Join our community</h1>
+                  <p>Follow us on social media to stay informed about our latest updates.</p>
                   <div class="wrap">
                     <a href="https://t.me/xsharkinu_official" target="_blank">
                       <button class="btnc">
