--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </div>
         <div class="col">
           <div class="row d-flex justify-content-center">
-            <div class="col-4 d-flex justify-content-center flex-column typodef typochart">
+            <div class="col-4 fees d-flex justify-content-center flex-column typodef typochart">
               <h2 class="h3 pt-2 text-white" style="color: #35acfc;"><strong style="color: #35acfc;">Fees</strong></h2>
               <hr class="hrteam" style="background: #35acfc;">
               <p>Buy Black: 3%</p>
