--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>X Shark INU</title>
+  <title>XShark INU</title>
   <meta name="description"
-    content="Bit House is the newest form of entertainment and information dissemination in the Crypto universe. Created to be an international reality show, Bit House will hold its first edition in Brazil and the prize for the winner can reach up to 1 BTC*.">
+    content="XShark INU">
   <meta name="keywords" content="XSharkINUoficial">
   <meta name="author" content="X Shark INU">
   <meta property="og:image" content="https://Blacksale.finance/images/logo150x150.png" />
