--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="X Shark INU">
   <meta property="og:image" content="https://Blacksale.finance/images/logo150x150.png" />
   <meta property="og:description"
-    content="Bit House is the newest form of entertainment and information dissemination in the Crypto universe. Created to be an international reality show, Bit House will hold its first edition in Brazil and the prize for the winner can reach up to 1 BTC*." />
+    content="XShark INU" />
 
   <link rel="icon" href="images/logob1.png">
 
