--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XShark INU</title>
+  <title>X-Shark INU</title>
   <meta name="description"
-    content="XShark INU">
+    content=" X-Shark Inu, Predatory Power in Web3 and DeFi">
   <meta name="keywords" content="XSharkINUoficial">
-  <meta name="author" content="X Shark INU">
+  <meta name="author" content="X-Shark INU">
   <meta property="og:image" content="https://Blacksale.finance/images/logo150x150.png" />
   <meta property="og:description"
-    content="XShark INU" />
+    content="X-Shark Inu, Predatory Power in Web3 and DeFi" />
 
   <link rel="icon" href="images/logob1.png">
 
@@ -51,7 +51,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarText">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://x-shark-inu.gitbook.io/x-shark-inu/"
+            <a class="nav-link" href="https://x-shark-inu.gitbook.io/x-shark-inu/team/meet-the-team"
               target="_blank">Whitepaper</a>
           </li>
           <li class="nav-item">
@@ -109,18 +109,18 @@
                 </h2>
                 <p data-aos="fade-left">
                   Dive into the depths of decentralized finance with X-Shark Inu, where the fintech waters are ruled by
-                  the fiercest predator of the market. As a meme coin inspired by the iconic shark, Shark Inu is not
+                  the fiercest predator of the market. As a meme coin inspired by the iconic shark, X-Shark Inu is not
                   just a token; it's a symbol of dominance in the vast ocean of Web3 and DeFi.
                 </p>
                 <p data-aos="fade-left">
                   The X-Shark Inu Project: Our ecosystem revolves around two key pillars – the X-Shark Inu Launchpad and
                   a robust Staking System. The Launchpad offers a dynamic space for emerging projects to make a tsunami
                   in the market, while our Staking System rewards users for actively contributing to the security and
-                  stability of the Shark Inu network.
+                  stability of the X-Shark Inu network.
                 </p>
                 <ul id="btnheader" class="d-flex justify-content-evenly flex-wrap">
                   <li>
-                    <a target="_blank" href="https://x-shark-inu.gitbook.io/x-shark-inu/">
+                    <a target="_blank" href="https://t.me/XSharkINUoficial">
                       <button class="custom-btn btn-5">
                         <div>
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -136,7 +136,7 @@
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="https://t.me/xsharkinu_official">
+                    <a target="_blank" href="https://t.me/XSharkINUoficial">
                       <button class="custom-btn btn-5">
                         <div>
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -222,7 +222,7 @@
 
               <div class="col d-flex justify-content-center">
                 <div class="typofs">
-                  <h2 style="color:#000000;">What<strong style="color:#35acfc;">X-Shark Inu is?</strong></h2>
+                  <h2 style="color:#000000;">What <strong style="color:#35acfc;">X-Shark Inu is?</strong></h2>
                 </div>
               </div>
             </div>
@@ -262,7 +262,7 @@
 
             <p class="mt-4" data-aos="fade-up">
               X-Shark Inu is a launchpad that allows you to create and participate in high-quality, high-potential token
-              sales. X Shark Inu will offer a series of advantages to token creators and buyers, such as:
+              sales. X-Shark Inu will offer a series of advantages to token creators and buyers, such as:
             </p>
             <p class="mt-4" data-aos="fade-up">
               - Verification and auditing of projects, ensuring security and transparency.
@@ -274,7 +274,7 @@
               PinkWallet, expanding the possibilities and functionalities of the tokens.
             </p>
             <p class="mt-4" data-aos="fade-up">
-              X Shark Inu is the ideal launchpad for anyone who wants to create or invest in innovative, profitable and
+              X-Shark Inu is the ideal launchpad for anyone who wants to create or invest in innovative, profitable and
               sustainable tokens. Don't miss this opportunity and join the shark team!
             </p>
             <p class="mt-4" data-aos="fade-up">
@@ -300,7 +300,7 @@
             </div>
 
             <p class="mt-4" data-aos="fade-up">
-              The x Shark inu NFT marketplace is a platform that allows you to buy, sell and collect high-quality,
+              The X-Shark inu NFT marketplace is a platform that allows you to buy, sell and collect high-quality,
               high-potential non-fungible tokens (NFTs). NFTs are unique and exclusive digital assets representing works
               of art, games, music, sports and more.
             </p>
@@ -346,14 +346,14 @@
                 </svg></div> -->
               <div class="col d-flex justify-content-center">
                 <div class="typofs">
-                  <h2 style="color:#000000;">Bridge and Multchain <strong style="color:#35acfc;">X Shark Inu</strong>
+                  <h2 style="color:#000000;">Bridge and Multchain <strong style="color:#35acfc;">X-Shark Inu</strong>
                   </h2>
                 </div>
               </div>
             </div>
 
             <p class="mt-4" data-aos="fade-up">
-              The bridge and multchain system will allow investors to swap X Shark tokens between various networks, as
+              The bridge and multchain system will allow investors to swap X-Shark tokens between various networks, as
               well as allowing swaps of cryptocurrencies such as BNB, ETH, USDT, Matic, among others.
             </p>
             <p class="mt-4" data-aos="fade-up">
@@ -372,14 +372,23 @@
           <h1 class="pt-2 text-white text-center">Tokenomics</h1>
         </div>
         <div class="col">
-          <div class="row d-flex justify-content-center">
-            <div class="col-4 fees d-flex justify-content-center flex-column typodef typochart">
+          <div class="row">
+            <div class="col-8 d-flex align-items-center flex-column">
+              <div class="tkdis typodef">
+                <h2 class="h3 pt-2 text-white text-center" style="color: #35acfc;"><strong style="color: #35acfc;">Token
+                    distribution</strong></h2>
+              </div>
+              <div id="energyAllocation"></div>
+              <div id="energyAllocationMobile"></div>
+            </div>
+            <div class="col-4 d-flex justify-content-center flex-column typodef typochart">
               <h2 class="h3 pt-2 text-white" style="color: #35acfc;"><strong style="color: #35acfc;">Fees</strong></h2>
               <hr class="hrteam" style="background: #35acfc;">
-              <p>Buy Black: 3%</p>
-              <p>Marketing: 3%</p>
-              <p>Liquidity: 1%</p>
-              <p>Rewards 1%</p>
+              <p>Prize: 2%</p>
+              <p>Marketing: 4%</p>
+              <p>Development: 4%</p>
+              <p>Rewards in BTH Holders: 5%</p>
+              <h4 class="h4 mt-3" style="color: #35acfc;">Total fees: <strong style="color: #35acfc;">15%</strong></h4>
             </div>
           </div>
         </div>
@@ -433,7 +442,7 @@
                 <h4 class="mt-3 mb-0">Launch Launchpad</h4>
                 <h4 class="mt-3 mb-0">Game Farm Launch </h4>
                 <h4 class="mt-3 mb-0">Customized NFT Sales </h4>
-                <h4 class="mt-3 mb-0">Shark Inu's Secret Launchs </h4>
+                <h4 class="mt-3 mb-0">X-Shark Inu's Secret Launchs </h4>
               </div>
             </li>
           </ul>
@@ -528,10 +537,10 @@
                 <div class="col d-flex justify-content-center"><img class="animt" src="../images/btcmini.png" alt="">
                 </div>
                 <div class="col-6 d-flex align-items-center flex-column" data-aos="fade-up">
-                  <h1 class="text-white">Join our community</h1>
-                  <p>Follow us on social media to stay informed about our latest updates.</p>
+                  <h1 class="text-white">Junte-se a nossa comunidade</h1>
+                  <p>Siga-nos nas redes sociais para se manter informado sobre nossas últimas atualizações.</p>
                   <div class="wrap">
-                    <a href="https://t.me/xsharkinu_official" target="_blank">
+                    <a href="https://t.me/blacksaleoficial" target="_blank">
                       <button class="btnc">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                           class="bi bi-telegram" viewBox="0 0 16 16">
@@ -560,7 +569,7 @@
             <img src="../images" alt="">
           </div>
           <div class="col d-flex justify-content-center mt-3">
-            <p>Copyright X Shark INU 2024</p>
+            <p>Copyright X-Shark INU 2024</p>
           </div>
           <p class="small text-center"><a href="https://t.me/thesadboy82" target="_blank">Layout by Pablo</a></p>
         </div>
