--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarText">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://x-shark-inu.gitbook.io/x-shark-inu/team/meet-the-team"
+            <a class="nav-link" href="https://x-shark-inu.gitbook.io/x-shark-inu"
               target="_blank">Whitepaper</a>
           </li>
           <li class="nav-item">
@@ -120,7 +120,7 @@
                 </p>
                 <ul id="btnheader" class="d-flex justify-content-evenly flex-wrap">
                   <li>
-                    <a target="_blank" href="https://t.me/XSharkINUoficial">
+                    <a target="_blank" href="https://t.me/blacksaleoficial">
                       <button class="custom-btn btn-5">
                         <div>
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -407,7 +407,7 @@
           <div class="typodef" data-aos="fade-right">
             <h2 style="color: #35acfc;">Roadmap</h2>
             <h3 class="pt-2">This Roadmap Outlines Our Strategic Approach To Building, Launching, And Growing The
-              X-SharkPlatform While Fostering A Vibrant And Engaged Community.</h3>
+              X-Shark Platform While Fostering A Vibrant And Engaged Community.</h3>
           </div>
         </div>
         <div class="col-7 d-flex align-items-center">
@@ -537,10 +537,10 @@
                 <div class="col d-flex justify-content-center"><img class="animt" src="../images/btcmini.png" alt="">
                 </div>
                 <div class="col-6 d-flex align-items-center flex-column" data-aos="fade-up">
-                  <h1 class="text-white">Junte-se a nossa comunidade</h1>
-                  <p>Siga-nos nas redes sociais para se manter informado sobre nossas últimas atualizações.</p>
+                  <h1 class="text-white">Join our community</h1>
+                  <p>Follow us on social media to stay informed about our latest updates.</p>
                   <div class="wrap">
-                    <a href="https://t.me/blacksaleoficial" target="_blank">
+                    <a href="https://t.me/xsharkinu_official" target="_blank">
                       <button class="btnc">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                           class="bi bi-telegram" viewBox="0 0 16 16">
