--- a/index.html
+++ b/index.html
@@ -375,20 +375,16 @@
           <div class="row">
             <div class="col-8 d-flex align-items-center flex-column">
               <div class="tkdis typodef">
-                <h2 class="h3 pt-2 text-white text-center" style="color: #35acfc;"><strong style="color: #35acfc;">Token
-                    distribution</strong></h2>
+                <h2 class="h3 pt-2 text-white text-center" style="color: #35acfc;"><strong style="color: #35acfc;">Tax Details</strong></h2>
               </div>
-              <div id="energyAllocation"></div>
-              <div id="energyAllocationMobile"></div>
             </div>
             <div class="col-4 d-flex justify-content-center flex-column typodef typochart">
-              <h2 class="h3 pt-2 text-white" style="color: #35acfc;"><strong style="color: #35acfc;">Fees</strong></h2>
+              <h2 class="h3 pt-2 text-white" style="color: #35acfc;"><strong style="color: #35acfc;"></strong></h2>
               <hr class="hrteam" style="background: #35acfc;">
-              <p>Prize: 2%</p>
-              <p>Marketing: 4%</p>
-              <p>Development: 4%</p>
-              <p>Rewards in BTH Holders: 5%</p>
-              <h4 class="h4 mt-3" style="color: #35acfc;">Total fees: <strong style="color: #35acfc;">15%</strong></h4>
+              <p>Buy Back: 3%</p>
+              <p>Marketing: 3%</p>
+              <p>Liquidity: 1%</p>
+              <p>Rewards (Bnb): 1%</p>
             </div>
           </div>
         </div>
