--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </p>
                 <ul id="btnheader" class="d-flex justify-content-evenly flex-wrap">
                   <li>
-                    <a target="_blank" href="https://t.me/blacksaleoficial">
+                    <a target="_blank" href="https://x-shark-inu.gitbook.io/x-shark-inu">
                       <button class="custom-btn btn-5">
                         <div>
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -136,7 +136,7 @@
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="https://t.me/XSharkINUoficial">
+                    <a target="_blank" href="https://t.me/xsharkinu_official">
                       <button class="custom-btn btn-5">
                         <div>
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
