--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="col colbarra">
               <div class="row flex-column" data-aos="zoom-in">
                 <div class="col d-flex justify-content-center">
-                  <h2 class="h2 text-white h2b" style="--num: 6481;"></h2>
+                  <h2 class="h2 text-white h2b" style="--num: 1105;"></h2>
                 </div>
                 <div class="col d-flex justify-content-center">
                   <p class="text-white fw-200 text-center">Telegram Members</p>
@@ -198,7 +198,7 @@
             <div class="col colbarra">
               <div class="row flex-column" data-aos="zoom-in">
                 <div class="col d-flex justify-content-center">
-                  <h2 class="h2 text-white h2b" style="--num: 6481;"></h2>
+                  <h2 class="h2 text-white h2b" style="--num: 1105;"></h2>
                 </div>
                 <div class="col d-flex justify-content-center">
                   <p class="text-white fw-200 text-center">Telegram Members</p>
@@ -207,6 +207,42 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section-esconder">
+    <div class="container">
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+          <div class="boxfs">
+            <div style=" margin-top: -41px; display: flex; margin-bottom: 19px; justify-content: center"><img
+                class="advSecLogo" src="./images/tubmoeda.webp" /></div>
+            <div class="row" data-aos="fade-up">
+
+              <div class="col d-flex justify-content-center">
+                <div class="typofs">
+                  <h2><Strong>X-Shark Inu</Strong><strong style="color:#000000;">, Predatory Power in Web3 and DeFi</strong></h2>
+                </div>
+              </div>
+            </div>
+            <h2 data-aos="fade-left">
+              <Strong style="color:#000000;">The calm has ENDED</Strong>
+            </h2>
+            <p class="mt-4" data-aos="fade-up">
+              Dive into the depths of decentralized finance with X-Shark Inu, where the fintech waters are ruled by
+              the fiercest predator of the market. As a meme coin inspired by the iconic shark, X-Shark Inu is not
+              just a token; it's a symbol of dominance in the vast ocean of Web3 and DeFi.
+            </p>
+            <p class="mt-4" data-aos="fade-up">
+              The X-Shark Inu Project: Our ecosystem revolves around two key pillars – the X-Shark Inu Launchpad and
+              a robust Staking System. The Launchpad offers a dynamic space for emerging projects to make a tsunami
+              in the market, while our Staking System rewards users for actively contributing to the security and
+              stability of the X-Shark Inu network.
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
